--- a/posts/2024-08-22-parse-sample-sizes/index.qmd
+++ b/posts/2024-08-22-parse-sample-sizes/index.qmd
@@ -1,7 +1,7 @@
 ---
-title: "2024-08-22-parse-sample-sizes"
+title: "Parse sample sizes from EBI GWAS catalog"
 author: Gibran Hemani
-date: "`r Sys.Date()`"
+date: "2024-08-22"
 categories: []
 ---
 
