--- a/posts/2024-11-23-age-interaction-power/index.qmd
+++ b/posts/2024-11-23-age-interaction-power/index.qmd
@@ -11,11 +11,18 @@ Individual level analysis versus age-stratified GWAS to detect GxAge interaction
 
 ## Simulation setup
 
+```{r, message=FALSE, warning=FALSE}
+library(dplyr)
+library(metafor)
+library(ggplot2)
+# library(rms)
+set.seed(12345)
+```
 
 The simulation is based on the following model:
 
 $$
-y_i = \beta_0 g + \beta_1 g_i \times a_i + \beta_2 g_i \times a_i^2 + \beta_3 g_i \times a_i^3 + e_i
+y_i = \alpha + \beta_0 g_i + \beta_1 g_i a_i + \beta_2 g_i a_i^2 + \beta_3 g_i a_i^3 + e_i
 $$
 
 where $y_i$ is the phenotype of individual $i$, $g_i$ is the genotype, $a_i$ is the age normalised to have range $(-1,1)$, and $e_i$ is the error term. 
@@ -26,11 +33,7 @@ The simulation is based on the following steps:
 2. Generate a set of individuals with age, genotype, and error terms
 
 ```{r}
-library(dplyr)
-library(metafor)
-library(rms)
-
-simdat <- function(n=500000, b0, b1, b2, b3) { 
+simdat <- function(n=500000, b0, b1, b2, b3) {
     nage <- length(40:70)
     coef <- tibble(
         age = 40:70,
@@ -74,7 +77,8 @@ An example of the model fit is shown below:
 ```{r}
 sumstats <- function(dat) {
     # split dat into 2 year age bins
-    dat <- dat %>% mutate(agebin = round(age / 2) * 2)
+    # dat <- dat %>% mutate(agebin = round(age / 2) * 2)
+    dat$agebin <- round(dat$age)
     ss <- group_by(dat, agebin) %>%
         do({
             a <- summary(lm(y ~ g, data=.))
@@ -141,66 +145,29 @@ Approaches using individual level data across all ages:
 estimation <- function(dat) {
     ss <- sumstats(dat)
     m1 <- rma.uni(yi=ss$beta, sei=ss$se, method="FE")
-    m2 <- rma.uni(yi=beta, sei=se, mods = ~ poly(agebin, degree=3), data=ss)
-    m6 <- rma(yi=beta, sei=se, mods = ~ rcs(agebin, 4), data=ss)
-    m7 <- rma(yi=beta, sei=se, mods = ~ agebin, data=ss)
+    m2 <- rma.uni(yi=beta, sei=se, mods = ~ poly(agebin, degree=3), data=ss, method="FE")
+    # m6 <- rma(yi=beta, sei=se, mods = ~ rcs(agebin, 4), data=ss)
+    m7 <- rma(yi=beta, sei=se, mods = ~ agebin, data=ss, method="FE")
 
     # Compare against individual level models
-    m3 <- summary(lm(y ~ g * poly(age, 3), data=dat))
-    m4 <- summary(lm(y ~ g, data=dat))
-    m5 <- summary(lm(y ~ g * age, data=dat))
-    m8 <- summary(lm(y ~ g + rcs(age, 4), data=dat))
+    modpval <- function(mod) { pf(mod$fstat[1], mod$fstat[2], mod$fstat[3], lower.tail=FALSE) }
+
+    reducedmod <- lm(y ~ g, data=dat)
+    m5 <- anova(reducedmod, lm(y ~ g * age, data=dat))
+    m3 <- anova(reducedmod, lm(y ~ g * poly(age, 3), data=dat))
+    # m8 <- anova(reducedmod, lm(y ~ g * rcs(age, 4), data=dat))
+    m9 <- anova(reducedmod, lm(y ~ g * as.factor(age), data=dat))
 
     bind_rows(
+        tibble(method="main", pval=summary(reducedmod)$coefficients[2, 4]),
+        tibble(method="ind_linear", pval=m5$P[2]),
+        tibble(method="ind_poly", pval=m3$P[2]),
+        # tibble(method="ind_rcs", pval=m8$P[2]),
+        tibble(method="ind_full", pval=m9$P[2]),
         tibble(method="heterogeneity", Q=m1$QE, pval=m1$QEp),
-        tibble(
-            method="meta_poly",
-            poly=1:3,
-            b = m2$beta[2:4],
-            se = m2$se[2:4],
-            pval = m2$pval[2:4]
-        ),
-        tibble(
-            method="meta_rcs",
-            poly=1:3,
-            b = m6$beta[2:4],
-            se = m6$se[2:4],
-            pval = m6$pval[2:4]
-        ),
-        tibble(
-            method="meta_linear",
-            poly=1,
-            b = m7$beta[2],
-            se = m7$se[2],
-            pval = m7$pval[2]
-        ),
-        tibble(
-            method="ind_poly",
-            poly=1:3,
-            b = m3$coef[5:7, 1],
-            se = m3$coef[5:7, 2],
-            pval = m3$coef[5:7, 4]
-        ),
-        tibble(
-            method="ind_linear",
-            poly=1,
-            b = m5$coef[4, 1],
-            se = m5$coef[4, 2],
-            pval = m5$coef[4, 4]
-        ),
-        tibble(
-            method="ind_rcs",
-            poly=1:3,
-            b = m8$coef[2:4, 1],
-            se = m8$coef[2:4, 2],
-            pval = m8$coef[2:4, 4]
-        ),
-        tibble(
-            method="main",
-            b = m4$coefficients[2, 1],
-            se = m4$coefficients[2, 2],
-            pval = m4$coefficients[2, 4]
-        )
+        tibble(method="meta_linear", Q=m7$QM, pval=m7$QMp),
+        tibble(method="meta_poly", Q=m2$QM, pval=m2$QMp),
+        # tibble(method="meta_rcs", Q=m6$QM, pval=m6$QMp),
     )
 }
 
@@ -215,6 +182,8 @@ run_sim <- function(b0=0, b1=0, b2=0, b3=0, n=500000, sim=1) {
 
 # Example
 run_sim(0.02, 0, 0, 0.05)
+dat <- simdat(500000, 0.02, 0, 0.02, 0.05)$dat
+
 ```
 
 Do this over a range of scenarios (this was run on HPC in parallel)
@@ -241,19 +210,21 @@ saveRDS(res, "sim.rds")
 ## Results
 
 ```{r}
-res <- readRDS("sim.rds")
-
-ress <- res %>% group_by(n, b0, b1, b2, b3, sim, method) %>%
-    summarise(minp=min(pval)) %>% ungroup()
+library(here)
+res <- readRDS(here("posts/2024-11-23-age-interaction-power/sim.rds"))
 ```
 
 
 **First check false discovery rates**
 
 ```{r}
-ress %>% group_by(main = b0 != 0, gxage = (b1 != 0 | b2 != 0 | b3 != 0), method) %>%
-    summarise(power=mean(minp < 0.05)) %>%
-    filter(!gxage)
+res %>% group_by(main = b0 != 0, gxage = (b1 != 0 | b2 != 0 | b3 != 0), method) %>%
+    summarise(power=mean(pval < 0.05)) %>%
+    filter(!gxage) %>%
+    ggplot(aes(x=method, y=power, fill=main)) +
+    geom_bar(stat="identity", position="dodge") +
+    geom_hline(yintercept=0.05, linetype="dashed") +
+    labs(y="False discovery rate")
 ```
 
 Model names:
@@ -261,9 +232,12 @@ Model names:
 - `main` = Individual level main effect of genotype with no interaction estimation
 - `ind_linear` = Individual level G x age with linear interaction
 - `ind_poly` = Individual level G x age with polynomial interaction
+- `ind_full` = Individual level G x age with age as a categorical variable
 - `heterogeneity` = Cochran's Q statistic for age-stratified summary statistics
 - `meta_linear` = Meta-regression for age-stratified summary statistics using linear interaction
 - `meta_poly` = Meta-regression for age-stratified summary statistics using polynomial interaction
+
+Note that all models are wrt 
 
 Summary:
 
@@ -274,15 +248,18 @@ Summary:
 **Check power**
 
 ```{r}
-ress %>% group_by(main = b0 != 0, gxage = (b1 != 0 | b2 != 0 | b3 != 0), method) %>%
-    summarise(power=mean(minp < 0.05)) %>%
-    filter(gxage)
+library(ggplot2)
+res %>% group_by(main = b0 != 0, gxage = (b1 != 0 | b2 != 0 | b3 != 0), method) %>%
+    summarise(power=mean(pval < 0.05)) %>%
+    filter(gxage) %>%
+    ggplot(aes(x=method, y=power, fill=main)) +
+    geom_bar(stat="identity", position="dodge")
 ```
 
 Summary:
 
-- Detecting G x age using `heterogeneity` (Cochran's Q) is reasonably powered ut has lower power than other approaches
-- Individual models have slightly higher power than meta-regression models
+- Detecting G x age using `heterogeneity` (Cochran's Q) is reasonably powered but has lower power than other approaches
+- Individual models have higher power than meta-regression models
 
 
 ---
