--- a/posts/2025-01-21-gxe/index.qmd
+++ b/posts/2025-01-21-gxe/index.qmd
@@ -14,6 +14,7 @@ Is it possible to estimate the environmental factor using the GxE interaction te
 ```{r}
 library(purrr)
 library(ggplot2)
+library(dplyr)
 ```
 
 
